--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>This is shakawath Hossen Repo</h1>
     <p>I am new in this github repo create. Forgive my mistakes.</p>
+    <img src="My.jpg" alt="">
+    <P>Hi i am shakawath Hossen. I am newly admitted into Proramming Hero Batch 05 for learnig Complete web Development course with Jhabkar Mahbub. I am learning HTML and CSS in last 2 days.Now i am trying to Save my codes into github. So i create a Github Repository and push my Codes.</P>
     
 </body>
 </html>
